--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 .App {
-  text-align: center;
+  Font-family: sans-serif;
+  Text-align: center;
+  height: 100vh; 
+  width: 100vw;   
 }
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
